[package]
name = "lambda-utils"
version = "0.1.0"
edition = "2021"
authors = ["jacksontkennedy99@gmail.com"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = "0.5.0"
http = "0.2.4"
async-trait = "0.1.64"
aws-sdk-dynamodb = "0.22.0"

log = "0.4"


