[package]
name = "random-image-site-discord-bot"
version = "0.1.0"
edition = "2021"
authors = ["Jackson Kennedy <jacksontkennedy99@gmail.com>"]

[dependencies]
image = "0.24.6"
reqwest = "0.11.16"
tracing = "0.1.23"
tracing-subscriber = "0.2"
serenity = "0.11.5"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }