[package]
name = "random-image-site-discord-bot"
version = "0.1.0"
edition = "2021"
authors = ["Jackson Kennedy <jacksontkennedy99@gmail.com>"]

[dependencies]
image = "0.24.6"
reqwest = {version="0.11.16", default-features=false, features=["rustls-tls"]}
tracing = "0.1.23"
tracing-subscriber = "0.2"
serenity = "0.11.5"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

# AWS
aws-config = "0.52.0"
aws-sdk-s3 = "0.22.0"
aws-sdk-secretsmanager = "0.22.0"