[package]
name = "get-image-lambda"
version = "0.1.0"
edition = "2021"
authors = ["jacksontkennedy99@gmail.com"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = "1"
rand = "0.8.5"
log = "0.4"
simple_logger = "1.11.0"
chrono = "0.4.23"
base64 = "0.20.0"
bytes = "1.3.0"
http = "0.2.4"
# NOTE: the following crate is not part of the SDK, but it is maintained by AWS.
lambda_runtime = "0.4"
aws-config = "0.52.0"
aws_lambda_events = "0.5.0"
# AWS SDKs
aws-sdk-s3 = "0.22.0"
aws-sdk-dynamodb = "0.22.0"

# Local dependencies
lambda_utils = { path = "../lambda_utils", version = "0.1.0" }

[[bin]]
name = "get_image_lambda"
path = "src/main.rs"