[package]
name = "get-image-lambda"
version = "0.1.0"
edition = "2021"
authors = ["jacksontkennedy99@gmail.com"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = "1"
serde_json = "1.0.93"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
chrono = "0.4.26"
base64 = "0.21.5"
bytes = "1.3.0"
http = "1.0.0"
# NOTE: the following crate is not part of the SDK, but it is maintained by AWS.
lambda_runtime = "0.8.1"
aws-config = "1.0.1"
aws_lambda_events = "0.12.1"
# AWS SDKs
aws-sdk-s3 = "1.4.0"
aws-sdk-dynamodb = "1.3.0"

# Local dependencies
lambda_utils = { path = "../lambda_utils", version = "0.1.0" }

[[bin]]
name = "get_image_lambda"
path = "src/main.rs"